Fix overlap with the nav bar in all pages.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -105,6 +105,7 @@ body {
 
 .main {
 	background-color: $lightgrey-color;
+	padding-top: 80px;
 //	max-height: 750px;
 }
 
