--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -2,7 +2,7 @@
 
 .results-top-bg {
 	width: 100%;
-	padding: 80px 0 20px;
+	padding: 10px 0 20px;
 	background-color: #c5c5c5;
 
 	.additional_info {
